@@ -246,19 +246,6 @@ applyAnimation <- function(x, ...) {
 }
 
 ############################
-## Functions to attempt to pull the "unit" off an existing unit
-## This is nasty and makes use of 'grid' internals knowledge,
-## but if it is any consolation, it used to be nastier
-
-unitUnit <- function(x) {
-    if (!inherits(x, "simpleUnit")) {
-        stop("Only simple units supported")
-    }
-    char <- as.character(x)
-    gsub(".+[0-9]([a-z]+)$", "\\1", char)
-}
-
-############################
 
 # Convert to animValue then take value(s) for shape "i"
 # This function is designed for animValues where timeid is NULL
@@ -281,7 +268,7 @@ ithValue <- function(animValues, i) {
 ithUnit <- function(animValues, origValue, i) {
     au <- as.animUnit(animValues,
                       # Only take the first "unit" value
-                      unit=unitUnit(origValue)[1])
+                      unit=attr(origValue, "unit")[1])
     if (!is.null(au$timeid))
         stop("Expecting only one value per time point")
     if (is.null(au$id))
@@ -312,7 +299,7 @@ ithAnimValue <- function(animValues, i) {
 ithAnimUnit <- function(animValues, origValue, i) {
     au <- as.animUnit(animValues,
                       # Only take the first "unit" value
-                      unit=unitUnit(origValue)[1],
+                      unit=attr(origValue, "unit")[1],
                       multVal=TRUE)
     if (is.null(au$timeid))
         stop("Expecting multiple values per time point")
@@ -1177,7 +1164,7 @@ applyAnimation.pathgrob <- function(x, animSet, animation, group, dev) {
         #        HAVE to follow the original series of M, L, Z to be
         #        valid;  otherwise behaviour of browser is undefined?
         if ("x" %in% names(animSet$animations)) {
-            au <- as.animUnit(animSet$animations$x, unitUnit(x$x))
+            au <- as.animUnit(animSet$animations$x, attr(x$x, "unit"))
             xx <- au$values
             pathid <- au$id
             timeid <- au$timeid
@@ -1185,7 +1172,7 @@ applyAnimation.pathgrob <- function(x, animSet, animation, group, dev) {
             xx <- x$x
         }
         if ("y" %in% names(animSet$animations)) {
-            au <- as.animUnit(animSet$animations$y, unitUnit(x$y))
+            au <- as.animUnit(animSet$animations$y, attr(x$y, "unit"))
             yy <- au$values
             pathid <- au$id
             timeid <- au$timeid
